2006-09-02 [colin]	2.4.0cvs128

	* src/imap.c
	* src/import.c
	* src/mainwindow.c
	* src/mainwindow.h
		Fix warning icon
	* src/inc.c
	* src/mbox.c
	* src/mbox.h
		Let proc_mbox know its account, for
		account-specific rules

2006-09-01 [colin]	2.4.0cvs127

	* src/codeconv.c
		Don't uselessly use iconv to convert from
		us-ascii
	* src/alertpanel.c
	* src/mainwindow.c
	* src/mainwindow.h
	* src/inc.c
		Fix certain log cases, disable warning icon
		for now, the correct way to display it when
		necessary and only when necessary is probably
		to do it manually rather than use error logs
	* src/etpan/imap-thread.c
		Clean up UID logging a bit
	* src/gtk/logwindow.c
	* src/gtk/logwindow.h
		Make logging faster when the window's closed

2006-09-01 [wwp]	2.4.0cvs126

	* manual/fr/account.xml
		reflect changes to the ref. manual (parts of cvs72):
		fix tabnames and quotes.

2006-09-01 [wwp]	2.4.0cvs125

	* manual/fr/plugins.xml
		reflect changes to the reference manual (cvs42):
		update IRC channel info.

2006-09-01 [wwp]	2.4.0cvs124

	* commitHelper
		use CVSEDITOR env. var. if set, according to `man cvs`.

2006-09-01 [wwp]	2.4.0cvs123

	* manual/advanced.xml
		better sentence again (thanks to Paul).

2006-09-01 [wwp]	2.4.0cvs122

	* manual/advanced.xml
	fix definition of toolbar_detachable and rework a bit the one of
	enable_dotted_lines.

2006-09-01 [mones]	2.4.0cvs121

	* manual/advanced.xml
		Document enable_dotted_lines

2006-09-01 [paul]	2.4.0cvs120

	* src/folderview.c
	* src/folderview.h
	* src/imap.c
	* src/mainwindow.c
	* src/summaryview.c
		obey the 'When entering folder...' option
		when using the /View/Go to/... menu items
		Thanks to Colin

2006-08-31 [colin]	2.4.0cvs119

	* src/folderview.c
		Revert 2.4.0cvs116, wrong fix.

2006-08-31 [colin]	2.4.0cvs118

	* src/gtk/gtksctree.c
		Better state the various copyrights

2006-08-31 [colin]	2.4.0cvs117

	* src/prefs_common.c
		fix enable_dotted_lines

2006-08-31 [colin]	2.4.0cvs116

	* src/folderview.c