@@ -1820,3 +1820,4 @@
 ( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 manual/fr/account.xml;  ) > 2.4.0cvs126.patchset
 ( cvs diff -u -r 1.17.2.26 -r 1.17.2.27 src/alertpanel.c;  cvs diff -u -r 1.65.2.48 -r 1.65.2.49 src/codeconv.c;  cvs diff -u -r 1.149.2.56 -r 1.149.2.57 src/inc.c;  cvs diff -u -r 1.274.2.142 -r 1.274.2.143 src/mainwindow.c;  cvs diff -u -r 1.39.2.21 -r 1.39.2.22 src/mainwindow.h;  cvs diff -u -r 1.1.4.48 -r 1.1.4.49 src/etpan/imap-thread.c;  cvs diff -u -r 1.1.4.17 -r 1.1.4.18 src/gtk/logwindow.c;  cvs diff -u -r 1.1.4.4 -r 1.1.4.5 src/gtk/logwindow.h;  ) > 2.4.0cvs127.patchset
 ( cvs diff -u -r 1.179.2.130 -r 1.179.2.131 src/imap.c;  cvs diff -u -r 1.13.2.17 -r 1.13.2.18 src/import.c;  cvs diff -u -r 1.149.2.57 -r 1.149.2.58 src/inc.c;  cvs diff -u -r 1.274.2.143 -r 1.274.2.144 src/mainwindow.c;  cvs diff -u -r 1.39.2.22 -r 1.39.2.23 src/mainwindow.h;  cvs diff -u -r 1.28.2.25 -r 1.28.2.26 src/mbox.c;  cvs diff -u -r 1.3.2.6 -r 1.3.2.7 src/mbox.h;  ) > 2.4.0cvs128.patchset
+( cvs diff -u -r 1.213.2.112 -r 1.213.2.113 src/folder.c;  cvs diff -u -r 1.274.2.144 -r 1.274.2.145 src/mainwindow.c;  cvs diff -u -r 1.1.4.18 -r 1.1.4.19 src/gtk/logwindow.c;  cvs diff -u -r 1.1.4.5 -r 1.1.4.6 src/gtk/logwindow.h;  ) > 2.4.0cvs129.patchset
